--- a/portfolio/Barbershop/app/scss/projects.scss
+++ b/portfolio/Barbershop/app/scss/projects.scss
@@ -146,7 +146,19 @@
                             }
                         }
                         }
-                        
+                        .colored {
+                            .after {
+                                display: none;
+                            }
+                        }
+                        .colored_hover {
+                                .before {
+                                    display: none;
+                                }
+                                .after {
+                                    display: block;
+                                }
+                        }
                         .active {
                             img {
                                 opacity: 1;
