--- a/portfolio/Barbershop/Новая папка/app/scss/dop.scss
+++ b/portfolio/Barbershop/Новая папка/app/scss/dop.scss
@@ -2,10 +2,6 @@
     position: relative;
     z-index: 2;
     height: 100%;
-    .container {
-        height: 100vh;
-        min-height: 624px;
-    }
 }
 
 .bg_page_dop {
@@ -92,6 +88,7 @@
                                     font: 2.8em "RobotoRegular";
                                     color: #999999;
                                     text-decoration: underline;
+                                    outline: none !important;
                                 }
                             }
                        }
@@ -191,8 +188,40 @@
     }
 }
 
+@media screen and (min-width: 1520px) {
+      #dop .container .dop_page .top_section .left_item h5, #dop .container .dop_page .top_section .right_item h5 {
+        margin-bottom: 0.2em;
+        margin-top: 0.3em;
+      }
+      #dop .container .dop_page .center_section h5 {
+        margin-bottom: 0.2em;
+        margin-top: 0.3em;
+      }
+}
+
+@media screen and (max-width: 1519px) {
+    #dop .container {
+        min-height: 624px;
+    }
+    #dop .container .dop_page .top_section .left_item h5, #dop .container .dop_page .top_section .right_item h5 {
+        margin-bottom: 0em;
+        margin-top: 0.3em;
+      }
+      #dop .container .dop_page .center_section h5 {
+        margin-bottom: 0em;
+        margin-top: 0.3em;
+      }
+}
 
 @media screen and (max-width: 1200px) {
+    #dop .container .dop_page .top_section .left_item h5, #dop .container .dop_page .top_section .right_item h5 {
+        margin-bottom: 0.4em;
+        margin-top: 0.3em;
+      }
+      #dop .container .dop_page .center_section h5 {
+        margin-bottom: 0.4em;
+        margin-top: 0.3em;
+      }
   #dop .container {
         min-height: 624px;
     }
@@ -243,6 +272,14 @@
     #dop .container .dop_page .center_section .content_center .block .bottom {
         margin: 0 auto;
     }
+    #dop .container .dop_page .top_section .left_item h5, #dop .container .dop_page .top_section .right_item h5 {
+        margin-bottom: 1em;
+        margin-top: 0.3em;
+      }
+      #dop .container .dop_page .center_section h5 {
+        margin-bottom: 1em;
+        margin-top: 0.3em;
+      }
 }
 
 @media screen and (max-width: 767px) {
@@ -261,6 +298,9 @@
 }
 
 @media screen and (max-width: 567px) {
+    #dop .container .dop_page .center_section .content_center .block p br {
+        display: none;
+    }
     #dop .container {
         min-height: 568px;
     }
