--- a/Shop/catalogue-page/app/css/catalog.css
+++ b/Shop/catalogue-page/app/css/catalog.css
@@ -388,7 +388,85 @@ ul {
 .with_box {
   margin-top: 45px; }
   .with_box .box_title {
-    margin-bottom: 25px; }
+    margin-bottom: 5px; }
+
+.bottom_line {
+  display: block;
+  height: 2px;
+  width: 100%;
+  background-color: #e8e8e8;
+  margin-top: 20px;
+  margin-bottom: 40px; }
+
+.popular_cat_block ul {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  border: 1px solid #e6e6e6;
+  width: 100%;
+  padding: 40px 5px; }
+  .popular_cat_block ul li {
+    width: 16.66%;
+    padding: 0 35px; }
+  .popular_cat_block ul .content_block {
+    position: relative; }
+  .popular_cat_block ul .content_block::before {
+    content: "";
+    display: block;
+    padding-top: 90%; }
+  .popular_cat_block ul a {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0.5;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s; }
+    .popular_cat_block ul a:hover {
+      opacity: 1; }
+  .popular_cat_block ul img {
+    width: 100%; }
+  .popular_cat_block ul p {
+    text-align: center;
+    margin: 0;
+    font-weight: bold; }
+
+.banner_block {
+  margin-top: 40px; }
+
+.block_popular {
+  margin-top: 20px; }
+  .block_popular .title_list p {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 0;
+    margin-top: -0.2em;
+    color: #010000; }
+  .block_popular .item {
+    display: block;
+    width: 100%; }
+    .block_popular .item a {
+      white-space: normal; }
+
+.product_slider {
+  margin-top: 10px;
+  margin-bottom: 20px; }
 
 @media screen and (min-width: 1025px) {
   .catalog .catalog-page .catalog-cards .card_content .bottom_section .right_item button:hover {
