--- a/Shop/catalogue-page/app/scss/catalog.scss
+++ b/Shop/catalogue-page/app/scss/catalog.scss
@@ -366,8 +366,90 @@ ul {
 .with_box {
     margin-top: 45px;
     .box_title {
-        margin-bottom: 25px;
+        margin-bottom: 5px;
     }
+}
+
+.bottom_line {
+    display: block;
+    height: 2px;
+    width: 100%;
+    background-color: #e8e8e8;
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+.popular_cat_block {
+    ul {
+        display: flex;
+        border: 1px solid #e6e6e6;
+        width: 100%;
+        padding: 40px 5px;
+        li {
+            width: 16.66%;
+            padding: 0 35px;
+        }
+        .content_block {
+            position: relative;
+         }
+        .content_block::before {
+             content: "";
+             display: block;
+             padding-top: 90%;
+        }
+         a {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            position: absolute;
+             top: 0;
+             left: 0;
+             bottom: 0;
+             right: 0;
+             opacity: 0.5;
+             transition: .3s;
+             &:hover {
+                opacity: 1;
+             }
+         }
+         img {
+            width: 100%;
+         }
+         p {
+            text-align: center;
+            margin: 0;
+            font-weight: bold;
+         }
+    }
+}
+
+.banner_block {
+    margin-top: 40px;
+}
+
+.block_popular {
+    margin-top: 20px;
+    .title_list {
+        p {
+            font-size: 18px;
+            font-weight: bold;
+            margin: 0;
+            margin-top: -0.2em;
+            color: #010000;
+        }
+    }
+    .item {
+         display: block;
+         width: 100%;
+         a {
+            white-space: normal;
+         }
+    }
+}
+
+.product_slider  {
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 
