--- a/portfolio/Barbershop/app/css/projects.css
+++ b/portfolio/Barbershop/app/css/projects.css
@@ -177,6 +177,12 @@
               cursor: pointer; }
             #projects .container .home_page_projects .page_content .bottom_projects .projects_content .block:hover img {
               opacity: 1; }
+          #projects .container .home_page_projects .page_content .bottom_projects .projects_content .colored .after {
+            display: none; }
+          #projects .container .home_page_projects .page_content .bottom_projects .projects_content .colored_hover .before {
+            display: none; }
+          #projects .container .home_page_projects .page_content .bottom_projects .projects_content .colored_hover .after {
+            display: block; }
           #projects .container .home_page_projects .page_content .bottom_projects .projects_content .active img {
             opacity: 1; }
           #projects .container .home_page_projects .page_content .bottom_projects .projects_content .active p {
