--- a/portfolio/Barbershop/Новая папка/app/css/main.css
+++ b/portfolio/Barbershop/Новая папка/app/css/main.css
@@ -2,9 +2,6 @@
   position: relative;
   z-index: 2;
   height: 100%; }
-  #home .container {
-    height: 100vh;
-    min-height: 624px; }
 
 .bg_page_home {
   width: 100%;
@@ -17,12 +14,70 @@
 .bg_page_other {
   width: 100%;
   height: 100%;
-  position: absolute;
-  background: url(../img/bg_moscov.jpg) no-repeat center center;
-  -webkit-background-size: cover;
-          background-size: cover; }
+  position: absolute; }
+  .bg_page_other #scene {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    overflow: hidden; }
+    .bg_page_other #scene .bg_other {
+      width: 100%;
+      height: 100%;
+      background: url(../img/bg_moscov.jpg) no-repeat center center;
+      -webkit-background-size: cover;
+              background-size: cover; }
+    .bg_page_other #scene .bg_img {
+      opacity: 0.05; }
+      .bg_page_other #scene .bg_img img {
+        width: 100%;
+        height: auto; }
+    .bg_page_other #scene .img1 {
+      left: 5% !important;
+      top: 90% !important;
+      height: 70em;
+      width: 70em; }
+    .bg_page_other #scene .img2 {
+      right: 10% !important;
+      top: 10% !important;
+      height: 40em;
+      width: 40em; }
+    .bg_page_other #scene .img3 {
+      left: 20% !important;
+      top: 25% !important;
+      height: 70em;
+      width: 70em; }
+    .bg_page_other #scene .img4 {
+      left: 50% !important;
+      top: 30% !important;
+      height: 70em;
+      width: 70em; }
+    .bg_page_other #scene .img5 {
+      left: 10% !important;
+      top: 50% !important;
+      height: 70em;
+      width: 70em; }
+    .bg_page_other #scene .img6 {
+      left: 80% !important;
+      top: 90% !important;
+      height: 30em;
+      width: 30em; }
+    .bg_page_other #scene .img7 {
+      left: 50% !important;
+      top: 80% !important;
+      height: 45em;
+      width: 45em; }
+    .bg_page_other #scene .img8 {
+      left: 90% !important;
+      top: 10% !important;
+      height: 90em;
+      width: 90em; }
   .bg_page_other .txt_bg {
-    height: 100%; }
+    height: 100%;
+    position: relative;
+    z-index: 2; }
     .bg_page_other .txt_bg .msk {
       display: -webkit-box;
       display: -webkit-flex;
@@ -161,7 +216,7 @@
         #home .container .tab_content .home_page .tab_content_block h2 {
           font: 9.5em "BebasNeueRegular";
           color: #fff;
-          padding-top: 5.6em; }
+          padding-top: 3em; }
           #home .container .tab_content .home_page .tab_content_block h2 span {
             font-family: "BebasNeueBook"; }
         #home .container .tab_content .home_page .tab_content_block .number {
@@ -214,7 +269,7 @@
           color: #fff;
           letter-spacing: 1.5em;
           padding-left: 1.5em;
-          padding-top: 7em; }
+          padding-top: 3em; }
           #home .container .tab_content .moscow_page .tab_content_block h2 span,
           #home .container .tab_content .spb_page .tab_content_block h2 span,
           #home .container .tab_content .reg_page .tab_content_block h2 span {
@@ -291,7 +346,7 @@
               #home .container .tab_content .spb_page .tab_content_block .number .right p .numb,
               #home .container .tab_content .reg_page .tab_content_block .number .left p .numb,
               #home .container .tab_content .reg_page .tab_content_block .number .right p .numb {
-                font: 22em "BebasNeueBold";
+                font: 30em "BebasNeueBold";
                 letter-spacing: 0em; }
               #home .container .tab_content .moscow_page .tab_content_block .number .left p .right_item,
               #home .container .tab_content .moscow_page .tab_content_block .number .right p .right_item,
@@ -315,7 +370,7 @@
                 -webkit-background-size: contain;
                         background-size: contain;
                 position: absolute;
-                top: 7em; }
+                bottom: 15em; }
           #home .container .tab_content .moscow_page .tab_content_block .number .left,
           #home .container .tab_content .spb_page .tab_content_block .number .left,
           #home .container .tab_content .reg_page .tab_content_block .number .left {
@@ -358,42 +413,49 @@
               -webkit-justify-content: flex-end;
                   -ms-flex-pack: end;
                       justify-content: flex-end; }
-    #home .container .tab_content .reg_page .tab_content_block .number {
-      -webkit-box-pack: justify !important;
-      -webkit-justify-content: space-between !important;
-          -ms-flex-pack: justify !important;
-              justify-content: space-between !important; }
-    #home .container .tab_content .reg_page .left {
-      -webkit-align-self: flex-start !important;
-          -ms-flex-item-align: start !important;
-              align-self: flex-start !important;
-      margin-left: 45em; }
-    #home .container .tab_content .reg_page .right {
-      -webkit-align-self: flex-end !important;
-          -ms-flex-item-align: end !important;
-              align-self: flex-end !important; }
-      #home .container .tab_content .reg_page .right .right_top {
-        padding-right: 50em; }
-      #home .container .tab_content .reg_page .right .left_item {
-        margin-left: 0; }
-      #home .container .tab_content .reg_page .right .more {
-        padding-top: 3.9em !important; }
-      #home .container .tab_content .reg_page .right .number {
-        -webkit-box-pack: end !important;
-        -webkit-justify-content: flex-end !important;
-            -ms-flex-pack: end !important;
-                justify-content: flex-end !important; }
-    #home .container .tab_content .reg_page .tab_content_block h2 {
-      font: 19.5em "BebasNeueBold";
+    #home .container .tab_content .reg_page .center {
+      padding-left: 0 !important;
+      padding-right: 23em !important; }
+    #home .container .tab_content .reg_page .top {
+      font-size: 10em !important;
+      padding-left: 0.15em;
+      letter-spacing: 0.1em;
+      padding-bottom: 0.4em;
+      padding-top: 0.7em; }
+    #home .container .tab_content .reg_page .tab_content_block .number .right .more {
+      padding-top: 15em; }
+    #home .container .tab_content .reg_page .left_item {
+      -webkit-align-self: center;
+          -ms-flex-item-align: center;
+              align-self: center;
       color: #fff;
-      letter-spacing: 0em;
-      padding-left: 0.5em;
-      padding-top: 2.3em;
-      padding-bottom: 0.3em; }
-      #home .container .tab_content .reg_page .tab_content_block h2 span {
-        font-family: "BebasNeueBook";
-        padding-right: 0.4em;
-        letter-spacing: .1em; }
+      white-space: nowrap;
+      position: relative; }
+      #home .container .tab_content .reg_page .left_item .left_item {
+        font: 6em "BebasNeueBook";
+        letter-spacing: 0.1em;
+        padding-right: 0.15em; }
+      #home .container .tab_content .reg_page .left_item .numb {
+        font: 30em "BebasNeueBold";
+        letter-spacing: 0em; }
+      #home .container .tab_content .reg_page .left_item .right_item {
+        font: 13em "BebasNeueRegular";
+        letter-spacing: 0.1em;
+        margin-left: 0.1em; }
+      #home .container .tab_content .reg_page .left_item .rub {
+        display: inline-block;
+        width: 5.6em;
+        height: 6.3em;
+        background: url(../img/rub.png) no-repeat;
+        -webkit-background-size: contain;
+                background-size: contain;
+        position: absolute;
+        bottom: 15em; }
+      #home .container .tab_content .reg_page .left_item .do {
+        font: 8em "BebasNeueRegular";
+        letter-spacing: 0em;
+        padding-left: 0.3em;
+        padding-right: 0.2em; }
   #home .container .tab_name {
     position: absolute;
     z-index: 10;
@@ -403,10 +465,10 @@
     margin: 0 -15px; }
     #home .container .tab_name .top {
       text-align: center;
-      font: 3.5em "BebasNeueRegular";
+      font: 5em "BebasNeueRegular";
       color: #595c5f;
-      letter-spacing: 4.5em;
-      padding-left: 4.5em; }
+      letter-spacing: 3em;
+      padding-left: 3em; }
     #home .container .tab_name .tab_names {
       display: -webkit-box;
       display: -webkit-flex;
@@ -446,6 +508,15 @@
         width: 25em;
         margin: 0 3em; }
 
+@media screen and (min-width: 1520px) {
+  #home .container {
+    overflow: hidden; } }
+
+@media screen and (max-width: 1519px) {
+  #home .container .tab_content .moscow_page .tab_content_block h2,
+  #home .container .tab_content .spb_page .tab_content_block h2 {
+    padding-top: 3em; } }
+
 @media screen and (max-width: 1200px) {
   #home .container {
     min-height: 624px; }
@@ -457,17 +528,19 @@
 
 @media screen and (max-width: 1023px) {
   #home .container .tab_name .tab_names p {
-    font-size: 7em; }
-  #home .container {
-    min-height: 576px; } }
+    font-size: 7em; } }
 
-@media screen and (max-width: 767px) {
-  #home .container {
-    min-height: 400px; } }
+@media screen and (max-width: 567px) and (max-height: 560px) {
+  #home .container .tab_content .moscow_page .tab_content_block h2, #home .container .tab_content .spb_page .tab_content_block h2 {
+    margin: 0 !important; } }
 
 @media screen and (max-width: 567px) {
   #home .container {
-    min-height: 568px; }
+    min-height: 520px; }
+  #home .container .tab_name {
+    bottom: 15em !important; }
+  #home .container .tab_content .home_page .tab_content_block .number {
+    padding-top: 0.07em; }
   .bg_page_other .txt_bg .spb p {
     font-size: 27em;
     padding-bottom: 3em; }
@@ -486,7 +559,22 @@
   #home .container .tab_content .moscow_page .tab_content_block .number .top,
   #home .container .tab_content .spb_page .tab_content_block .number .top,
   #home .container .tab_content .reg_page .tab_content_block .number .top {
-    padding-bottom: 0.25em; }
+    padding-bottom: 0.6em; }
+  #home .container .tab_content .reg_page .tab_content_block .number .center {
+    -webkit-box-ordinal-group: 2;
+    -webkit-order: 1;
+        -ms-flex-order: 1;
+            order: 1; }
+  #home .container .tab_content .reg_page .tab_content_block .number .left {
+    -webkit-box-ordinal-group: 3;
+    -webkit-order: 2;
+        -ms-flex-order: 2;
+            order: 2; }
+  #home .container .tab_content .reg_page .tab_content_block .number .right {
+    -webkit-box-ordinal-group: 4;
+    -webkit-order: 3;
+        -ms-flex-order: 3;
+            order: 3; }
   #home .container .tab_content .moscow_page .tab_content_block .number .left p .left_item,
   #home .container .tab_content .moscow_page .tab_content_block .number .right p .left_item,
   #home .container .tab_content .spb_page .tab_content_block .number .left p .left_item,
@@ -539,7 +627,8 @@
   #home .container .tab_content .moscow_page .tab_content_block .number .center,
   #home .container .tab_content .spb_page .tab_content_block .number .center,
   #home .container .tab_content .reg_page .tab_content_block .number .center {
-    padding-left: 0; }
+    padding-left: 0;
+    padding-right: 0 !important; }
   #home .container .tab_content .moscow_page .tab_content_block .number .num {
     padding-right: 0.08em; }
   #home .container .tab_content .moscow_page .bg_city p {
@@ -550,6 +639,10 @@
   #home .container .tab_content .reg_page .tab_content_block h2 {
     font-size: 14em;
     margin-bottom: 1em; }
+  #home .container .tab_content .moscow_page .tab_content_block h2, #home .container .tab_content .spb_page .tab_content_block h2 {
+    padding-left: 0; }
+  #home .container .tab_content .reg_page .tab_content_block h2 {
+    padding-left: 0.5em; }
   #home .container .tab_content .reg_page .tab_content_block .number {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -572,8 +665,6 @@
     letter-spacing: 0.13em; }
   #home .container .tab_content .reg_page .tab_content_block .number .right p {
     padding: 0; }
-  #home .container .tab_content .reg_page .tab_content_block .number .right .more {
-    padding-top: 10.2em !important; }
   #home .container .tab_content .reg_page .tab_content_block .number .right {
     margin: 0;
     -webkit-align-self: center !important;
