--- a/portfolio/Barbershop/Новая папка/app/scss/_fonts.scss
+++ b/portfolio/Barbershop/Новая папка/app/scss/_fonts.scss
@@ -6,3 +6,5 @@
 @include font-face("BebasNeueBold", "../fonts/Bebas/BebasBold/BebasBold");
 @include font-face("RobotoRegular", "../fonts/Roboto/RobotoRegular/RobotoRegular");
 @include font-face("RobotoCondensed", "../fonts/Roboto/RobotoCondensed/RobotoCondensedRegular");
+@include font-face("RobotoCondensedBold", "../fonts/Roboto/RobotoCondensed/RobotoCondensedBold");
+@include font-face("RobotoCondensedItalic", "../fonts/Roboto/RobotoCondensed/RobotoCondensedItalic");
