--- a/portfolio/Barbershop/Новая папка/app/scss/_media.scss
+++ b/portfolio/Barbershop/Новая папка/app/scss/_media.scss
@@ -1,8 +1,25 @@
-@media screen and (min-width: 1400px) {
-	.bg_topgun .bg {
-		width: 1370px;
-		margin: 0 auto;
+@media screen and (min-width: 1520px) {
+	body {
+	  	font-size: 4px;
+	  }
+	  .content_site .container, html, body, #wrapprer {
+        min-height: 860px;
+      }
+}
+
+@media screen and (max-width: 1519px) {
+	.content_site .container, html, body, #wrapprer {
+        min-height: 627px;
+      }
+   	.container {
+		max-width: 1200px;
 	}
+	#projects .container .home_page_projects .page_content .bottom_projects .projects_content .block p {
+        font-size: 4.2em !important;
+      }
+}
+
+@media screen and (min-width: 1400px) {
 	.bg_page_other .txt_bg .invest .bg .bg_content {
 		width: 1370px !important;
 	}
@@ -69,10 +86,17 @@
 	  #header .container .navigation li {
 	  	margin: 0 10px;
 	  }
+	  #header .container .header_top #lang_block {
+	  	font-size: 2.5px;
+	  	top: 5em;
+	  }
 }
 
 // ≥576px
 @media screen and (max-width: 567px) {
+	#header .container .header_top #lang_block {
+	  	right: auto;
+	  }
     #header .container .header_top .right {
     	display: none;
     }
@@ -96,6 +120,7 @@
     	margin-top: 0;
     	height: 100%;
     	padding: 100px 0;
+    	box-sizing: border-box;
     }
     #navigation a {
     font-size: 15em;
@@ -111,9 +136,6 @@
 		bottom: auto !important;
 		left: 15px;
 		top: 25px;
-	}
-	#wrapper {
-		min-height: 300px;
 	}
 }
 
