--- a/portfolio/Barbershop/Новая папка/app/scss/common.scss
+++ b/portfolio/Barbershop/Новая папка/app/scss/common.scss
@@ -9,6 +9,7 @@
 html {
     background: #101011;
     min-width: 320px;
+    min-height: 520px;
 }
 
 body {
@@ -21,11 +22,20 @@ body {
 
 .container {
     min-width: 320px;
-    max-width: 1200px;
+    max-width: 1480px;
+    box-sizing: border-box;
     margin: 0 auto;
     padding: 0 15px;
 }
 
+.content_site .container {
+        height: 100vh;
+      }
+
+.mobile_display {
+    height: 100% !important;
+    min-height: 520px !important;
+}
 
 body {
     font-size: 3px;
@@ -43,16 +53,40 @@ p {
 
 .bg_topgun {
     position: absolute;
-    width: calc(100% - 30px);
-    z-index: 2; 
+    width: 90%;
+    z-index: 2;
     height: 100%;
-    left: 15px;
+    left: 5%;
     .bg {
         width: 100%;
-        height: 100%;
-    background: url(../img/bg_logo.png) no-repeat center center;
-    background-size: contain;
+        position: absolute;
+        z-index: 2;
+        top: 50%;
+        transform: translateY(-50%);
+        img {
+            width: 100%;
+        }
     }
+    .active_shadow {
+        display: block;
+        width: 70%;
+        left: 15%;
+        position: absolute;
+        z-index: 1;
+        height: 0;
+        top: 50%;
+        transition: 1s ease;
+        box-shadow: 0px 0px 40em 60em rgba(235, 230, 235, 0.08);
+        opacity: 0;
+    }
+    .active {
+         opacity: 1;
+    }
+}
+
+.bg_topgun_active {
+    height: 100vh !important;
+    position: fixed !important;
 }
 
 .nav-btn {
@@ -116,28 +150,6 @@ p {
     }
 }
 
-#lang_block {
-    display: flex;
-    position: absolute;
-    right: 3em;
-    top: 3em;
-    z-index: 10;
-    a {
-        display: block;
-        text-decoration: none;
-        color: #fff;
-        font: 6em "BebasNeueLight";
-        margin-left: 0.33em;
-        letter-spacing: 0.2em;
-        &:first-child {
-            margin-left: 0;
-        }
-    }
-    .active_lang {
-        font-family: "BebasNeueRegular";
-    }
-}
-
 #header {
     position: absolute;
     width: 100%;
@@ -167,13 +179,26 @@ p {
                     letter-spacing: 0.2em;
                 }
             }
-            .right {
+            #lang_block {
+                display: flex;
                 position: absolute;
-                right: 0;
-                background: url(../img/stopping-sales.png) no-repeat;
-                background-size: contain;
-                width: 60.5em;
-                height: 25.3em;
+                right: 0em;
+                top: 7.1em;
+                z-index: 10;
+                a {
+                    display: block;
+                    text-decoration: none;
+                    color: #fff;
+                    font: 6em "BebasNeueLight";
+                    margin-left: 0.33em;
+                    letter-spacing: 0.2em;
+                    &:first-child {
+                        margin-left: 0;
+                    }
+                }
+                .active_lang {
+                    font-family: "BebasNeueRegular";
+                }
             }
         }
     }
@@ -217,16 +242,15 @@ p {
 
 #contacts_tab {
     height: 100%;
-    min-height: 100vh;
     position: relative;
     z-index: 3;
     .bg_all {
-    	position: absolute;
+        position: absolute;
         z-index: 1;
         width: 100%;
         height: 100%;
-    	background: url(../img/bg_moscov.jpg) center center;
-    	background-size: cover;
+        background: url(../img/bg_moscov.jpg) center center;
+        background-size: cover;
     }
     .bg_tab {
         position: absolute;
@@ -234,93 +258,91 @@ p {
         width: 100%;
         height: 100%;
         .container {
-        	position: relative;
+            position: relative;
         }
     }
     .bg_portret {
-    	position: absolute;
-    	z-index: 3;
-    	right: 0;
-    	bottom: 0;
-    	background: url(../img/portret.png);
-    	background-size: cover;
-    	width: 176em;
-    	height: 176em;
+        position: absolute;
+        z-index: 3;
+        right: 0;
+        bottom: 0;
+        background: url(../img/portret.png);
+        background-size: cover;
+        width: 176em;
+        height: 176em;
     }
     .container {
         position: relative;
-        height: 100%;
         z-index: 3;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        min-height: 100vh;
         .top {
-        	display: block;
-        	width: 100%;
-        	font: 8em "BebasNeueBook";
-        	color: #fff;
-        	text-align: center;
-        	letter-spacing: 0.35em;
-        	padding-left: 0.35em;
+            display: block;
+            width: 100%;
+            font: 8em "BebasNeueBook";
+            color: #fff;
+            text-align: center;
+            letter-spacing: 0.35em;
+            padding-left: 0.35em;
             padding-top: 3em;
         }
         .bottom {
-        	display: block;
-        	font: 8em "BebasNeueBook";
-        	color: #fff;
-        	text-align: center;
-        	letter-spacing: 0.2em;
-        	padding-left: 0.21em;
+            display: block;
+            font: 8em "BebasNeueBook";
+            color: #fff;
+            text-align: center;
+            letter-spacing: 0.2em;
+            padding-left: 0.21em;
         }
         h2 {
-        	font: 10.7em "BebasNeueRegular";
-        	color: #fff;
-        	text-align: center;
-        	letter-spacing: 0.09em;
+            font: 10.7em "BebasNeueRegular";
+            color: #fff;
+            text-align: center;
+            letter-spacing: 0.09em;
             padding-left: 0.1em;
         }
         .number {
-        	font: 10.7em "BebasNeueRegular";
-        	text-align: center;
-        	color: #fff;
-        	letter-spacing: 0.165em;
+            font: 10.7em "BebasNeueRegular";
+            text-align: center;
+            color: #fff;
+            letter-spacing: 0.165em;
             padding-left: 0.165em;
-        	padding-top: 0.1em;
+            padding-top: 0.1em;
         }
         .bottom_block {
-        	padding-top: 15em;
-        	.first {
-        		font: 5.4em "RobotoRegular";
-        		color: #fff;
-        		text-align: center;
+            padding-top: 15em;
+            .first {
+                font: 5.4em "RobotoRegular";
+                color: #fff;
+                text-align: center;
                 letter-spacing: 0.16em;
                 padding-left: 0.16em;
-        	}
-        	.second {
-        			font: 8.4em "BebasNeueBook";
-        			color: #fff;
-        			text-align: center;
-        			letter-spacing: 0.095em;
-        			padding-left: 0.095em;
-        			span {
-        				font-family: "BebasNeueRegular";
-        			}
-        	}
+            }
+            .second {
+                font: 8.4em "BebasNeueBook";
+                color: #fff;
+                text-align: center;
+                letter-spacing: 0.095em;
+                padding-left: 0.095em;
+                span {
+                    font-family: "BebasNeueRegular";
+                }
+            }
         }
         .footer {
-        		display: flex;
-        		justify-content: center;
-        		position: absolute;
-        		bottom: 5em;
-        		width: 100%;
-        		p {
-        			font: 3.7em "RobotoRegular";
-        			color: #c6c6c6;
-        			padding: 0 1em;
-        			text-align: center;
-        		}
-        	}
+            display: flex;
+            justify-content: center;
+            position: absolute;
+            bottom: 5em;
+            width: 100%;
+            p {
+                font: 3.7em "RobotoRegular";
+                color: #c6c6c6;
+                padding: 0 1em;
+                text-align: center;
+            }
+        }
     }
 }
 
